# TTL-Legacy

./: .env  FINAL_SUMMARY.txt  IMPLEMENTATION_CHECKLIST.md  WITHDRAWAL_FEATURES_SUMMARY.md
backend/src/: db.rs  handlers.rs  models.rs  notifications.rs
contracts/ttl_vault/: Cargo.toml
contracts/ttl_vault/fuzz/: fuzz_ttl.rs
contracts/ttl_vault/src/: lib.rs  test.rs  types.rs
docs/: api-reference.md  architecture.md  multi-sig.md  token-management.md  ttl-logic.md  withdrawal-features.md
mobile/: README.md
mobile/android/app/: build.gradle.kts
mobile/android/app/src/androidTest/java/com/ttllegacy/: VaultListScreenTest.kt
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/ttllegacy/: TTLLegacyApplication.kt
mobile/android/app/src/main/java/com/ttllegacy/api/: ApiClient.kt  Infrastructure.kt
mobile/android/app/src/main/java/com/ttllegacy/di/: AppModule.kt
mobile/android/app/src/test/java/com/ttllegacy/: VaultModelTest.kt  VaultViewModelTest.kt
mobile/android/gradle/: libs.versions.toml
mobile/ios/TTLLegacy/: Package.swift
mobile/ios/TTLLegacy/Sources/App/: TTLLegacyApp.swift
mobile/ios/TTLLegacy/Sources/Models/: Models.swift
mobile/ios/TTLLegacy/Sources/Services/: APIClient.swift  KeychainService.swift  NotificationService.swift  OfflineSupport.swift  PasskeyService.swift
mobile/ios/TTLLegacy/Sources/ViewModels/: Stores.swift
mobile/ios/TTLLegacy/Sources/Views/: Views.swift
mobile/ios/TTLLegacy/Tests/: TTLLegacyTests.swift
mobile/shared/: api-contract.md
(+8 files in other folders)
